--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "on demand server",
   "main": "index.js",
   "scripts": {
-    "dev": "node -r esm src/server.js"
+    "dev": "nodemon -r esm src/server.js",
+    "start": "node -r esm src/server.js"
   },
   "author": "socialtitli",
   "license": "ISC",
