--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_PORT = 5000
 DEBUG_MODE = true
 DB_URL = "mongodb+srv://socialtitli:<password>@cluster0.18rrfrz.mongodb.net/?retryWrites=true&w=majority"
-APP_URL = 127
+APP_URL = '127.0.0.1'
 APP_HOST = localhost
