--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
+    "esm": "^3.2.25",
     "express": "^4.18.1",
+    "joi": "^17.6.0",
     "node": "^18.7.0",
     "yarn": "^1.22.19"
   },
