--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ DEBUG_MODE = true
 DB_URL = "mongodb+srv://socialtitli:<password>@cluster0.18rrfrz.mongodb.net/?retryWrites=true&w=majority"
 APP_URL = '127.0.0.1'
 APP_HOST = localhost
+DB_NAME=photograpy
+DB_USERNAME=root
+DB_PASSWORD=admin
