--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "debug": "^4.3.4",
     "dotenv": "^16.0.1",
     "esm": "^3.2.25",
     "express": "^4.18.1",
     "joi": "^17.6.0",
+    "mongo-sanitize": "^1.1.0",
+    "mongoose": "^6.5.1",
     "node": "^18.7.0",
+    "swagger-jsdoc": "^6.2.4",
+    "swagger-ui-express": "^4.5.0",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
