--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ DEBUG_MODE = true
 DB_URL = "mongodb+srv://socialtitli:<password>@cluster0.18rrfrz.mongodb.net/?retryWrites=true&w=majority"
 APP_URL = '127.0.0.1'
 APP_HOST = localhost
-DB_NAME=photography
+DB_NAME= blog
 DB_USERNAME=root
 DB_PASSWORD=admin
 JWT_SECRET=photograpysecretpasswordinthisproject
