--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongo-sanitize": "^1.1.0",
     "mongoose": "^6.5.1",
+    "multer": "^1.4.5-lts.1",
     "node": "^18.7.0",
     "swagger-jsdoc": "^6.2.4",
     "swagger-ui-express": "^4.5.0",
